--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img width="320" height="500" src="images/2.png" alt="My test image">
         </section>
         <section class="right">
-            <p>小遊戲區</p>
+            <p>作品區</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57877.87020144069!2d121.15967523124999!3d24.953629099999993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34682248fcfa49d7%3A0x57e0b78df52b3c96!2z5Lit5aOi54Gr6LuK56uZ!5e0!3m2!1szh-TW!2stw!4v1651924670580!5m2!1szh-TW!2stw" 
             width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <br/>
